@@ -2,10 +2,11 @@
 from lorm import Hub
 import datetime
 import time
+import pymysql
 
 if __name__ == '__main__':
     "test"
-    db = Hub()
+    db = Hub(pymysql)
     # master db connection
     db.add_pool('default', host='192.168.1.110', port=3306, user='root', 
                 passwd='1', db='test', charset='utf8', autocommit=True,
@@ -23,7 +24,7 @@ if __name__ == '__main__':
     #print user.id, user.last_login
     # >>> 1 2013-04-10 11:22:06
 
-    #print db.slave.auth_user[0]
+    print db.slave.auth_user[0]
 
     # greater than
     #print db.slave.auth_user.filter(id__gt=10).first()
@@ -126,14 +127,14 @@ if __name__ == '__main__':
     #print db.default.open
 
     # test reconnect
-    c = db.slave
-    print c.auth_user.get(id=1).id
-    # turn off networking
-    time.sleep(5)
-    try:
-        print c.auth_user.get(id=1).id
-    except:
-        print 'broken'
-    # turn on networking
-    time.sleep(10)
-    print c.auth_user.get(id=1).id
+    # c = db.slave
+    # print c.auth_user.get(id=1).id
+    # # turn off networking
+    # time.sleep(5)
+    # try:
+    #     print c.auth_user.get(id=1).id
+    # except:
+    #     print 'broken'
+    # # turn on networking
+    # time.sleep(10)
+    # print c.auth_user.get(id=1).id
