@@ -1,5 +1,5 @@
 #coding: utf-8
 
-__version__ = '0.3.14'
+__version__ = '0.3.15'
 
 from .db import *
